Fix text stroke on mobile

--- a/src/assets/welcome.css
+++ b/src/assets/welcome.css
@@ -10,6 +10,7 @@
     left: 50%;
     transform: translate(-50%, 0);
     text-align: center;
+    font-family: sans-serif;
     font-size: 40px;
     font-weight: 700;
     color: var(--text-color);
